--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: aqua;
 }
 
 html {
@@ -296,7 +297,7 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: aquamarine;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
@@ -392,6 +393,7 @@ article .icon {
 .contact-info-upper-container {
   display: flex;
   justify-content: center;
+  background-color: aquamarine;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
