--- a/style.css
+++ b/style.css
@@ -168,8 +168,16 @@ section {
   gap: 5rem;
   height: 80vh;
 }
-
 .section__pic-container {
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin: auto 0;
+  border-radius: 50%; /* Make the container round */
+  overflow: hidden; /* Ensures the image stays within the round shape */
+}
+
+.section__pic-container2 {
   display: flex;
   height: 400px;
   width: 400px;
